fixed ugly scrollbar

--- a/Version2/styles.css
+++ b/Version2/styles.css
@@ -16,6 +16,7 @@ body, html {
     color: rgb(236, 236, 236);
     --border-colour: rgba(8, 71, 102, 0.591);
     transition: all ease 0.4s;
+    overflow-x: hidden;
 }
 
 body {
@@ -221,6 +222,8 @@ body {
     height: 65vh;
     display: grid;
     grid-template-columns: 0.3fr 0.7fr;
+    width:100%;
+    overflow: hidden;
 }
 
 .header {
@@ -240,10 +243,10 @@ body {
 }
 
 #projects {
+    overflow-y: scroll;
     background-color: rgb(24, 24, 24);
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
     padding: 1%;
     padding-bottom: 3%;
 }
